--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,8 @@ a{
   list-style: none;
   color: black;
 }
+@media only screen and (max-width: 750px) {
+  .form, .main, .list {
+    width: 100%;
+  }
+}
